--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
                 <div class="pm">
                     <div class="cont4">SANSKRIT</div>
                     <br>
+                   <div class="gg">
                     सम्यक् परिष्कृतं शुद्धमर्थाद् दोषरहितं व्याकरणेन संस्कारितं वा यत्तदेव संस्कृतम्। एवञ्च सम्-उपसर्गपूर्वकात् कृधातोर्निष्पन्नोSयं शब्द संस्कृतभाषेति नाम्रा सम्बोध्यते। सैव देवभाषा गीर्वाणवाणी, देववाणी, अमरवाणी, गीर्वागित्यादिभिर्नामभिः कथ्यते। इयमेव भाषा सर्वासां भारतीयभाषाणां जननी, भारतीयसंस्कृतेः प्राणस्वरूपा, भारतीयधर्मदर्शनादिकानां प्रसारिका, सर्वास्वपि विश्वभाषासु प्राचीनतमा सर्वमान्या च मन्यते।
+                   </div>
                 </div>
                 <div class="image2">
                     <img src="images.jpg" alt="">
@@ -236,7 +238,7 @@
                         <div class="input">
                             <input type="text" name="Name" class="name" placeholder="Your Name" required>
                         </div>
-                    <div class="input">
+                    <div class="pnput">
                         <input type="text" name="Email" class="email" placeholder="Your Email" required>
                     </div>
                     <div class="textarea">
@@ -253,7 +255,7 @@
            
         </div>
     </div>
-    <footer >
+    <footer class="fg" >
         <span class="foot">Created By <a class="has" href="" target="_blank">Ansh Khandelwal</a>
             <i class="fa-duotone fa-copyright"></i>2023 all rights reserved</span>
     </footer>
