--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- navbar section -->
     <div class="navbar">
         <div class="img">
-            <img src="r-removebg-preview (1).png" alt="NO INTERNET CONNECTION">
+            <img src="10.jpg.png" alt="NO INTERNET CONNECTION">
         </div>
         <div class="text">
             <a href="#home">
